removing color bug from dark mode

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -41,13 +41,11 @@
 .title {
     font-size: 3em;
     font-weight: bold;
-    color: #000000;
     padding: 1rem;
 }
 
 .subtitle {
     font-size: 1.5em;
     font-weight: bold;
-    color: #000000;
 }
 
